Split source set DSL

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -30,94 +30,29 @@ jar {
 }
 
 crochet {
-    features {
-        create('common') {
-            capability(group, project.name, project.version as String)
-            disablePublication()
-        }
-        create('client') {
-            disablePublication()
-        }.configure {
-            inherit('common') {
-                markAdditionalString = 'Fabric-Loom-Client-Only-Entries'
-            }
-        }
-        create('server') {
-            it.disablePublication()
-        }.configure {
-            inherit('common') {
-                markAdditionalString = 'Fabric-Loom-Server-Only-Entries'
-            }
-        }
-        modify('main') {
-            feature 'joined'
-            inherit 'client'
-            inherit 'server'
-        }
-    }
+    fabricSplitSourceSets('main') {
+        installation {
+            minecraft = '1.21.1'
 
-    fabricInstallation('fabric') {
-        minecraft = '1.21.1'
-
-        dependencies {
-            loader 'net.fabricmc:fabric-loader:0.16.0'
-            mappings = chained {
-                add official()
-                add(parchment(artifact 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip'))
+            dependencies {
+                loader 'net.fabricmc:fabric-loader:0.16.0'
+                mappings = chained {
+                    add official()
+                    add(artifact 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip')
+                }
             }
         }
 
-        forFeature(project.sourceSets.main)
-    }
+        baseFeature = ''
 
-    fabricInstallation('fabricClient') {
-        minecraft = '1.21.1'
-
-        client()
-
-        dependencies {
-            loader 'net.fabricmc:fabric-loader:0.16.0'
-            mappings = chained {
-                add official()
-                add(parchment(artifact 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip'))
+        common('common') {
+            dependencies {
+                modImplementation project(':subproject')
             }
         }
-
-        forFeature(project.sourceSets.client)
-    }
-
-    fabricInstallation('fabricServer') {
-        minecraft = '1.21.1'
-
-        server()
-
-        dependencies {
-            loader 'net.fabricmc:fabric-loader:0.16.0'
-            mappings = chained {
-                add official()
-                add(parchment(artifact 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip'))
-            }
-        }
-
-        forFeature(project.sourceSets.server)
-    }
-
-    fabricInstallation('fabricCommon') {
-        minecraft = '1.21.1'
-
-        common()
-
-        dependencies {
-            loader 'net.fabricmc:fabric-loader:0.16.0'
-            mappings = chained {
-                add official()
-                add(parchment(artifact 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip'))
-            }
-        }
-
-        forFeature(project.sourceSets.common) {
-            modImplementation project(':subproject')
-        }
+        server('server')
+        client('client')
+        joined('main')
     }
 
     fabricInstallation('fabricYarn') {
@@ -147,11 +82,11 @@ crochet {
             client installations.vanilla
         }
         fabricClient {
-            client installations.fabricClient
+            client splitSourceSets.main.client
             implementation project(':')
         }
         fabricServer {
-            server installations.fabricServer
+            server splitSourceSets.main.server
             implementation project(':')
         }
         fabricYarnClient {
