Correctly pin MC dependency versions even on new versions where loader must upgrade dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -143,6 +143,10 @@ repositories {
 
     mavenCentral()
     gradlePluginPortal()
+    maven {
+        name 'Staging'
+        url 'https://maven.lukebemish.dev/staging/'
+    }
 }
 
 var versions = new Properties()
