--- a/test/subproject/build.gradle
+++ b/test/subproject/build.gradle
@@ -14,6 +14,10 @@ repositories {
         name = "ParchmentMC"
         url = uri("https://maven.parchmentmc.org/")
     }
+    maven {
+        name 'Staging'
+        url 'https://maven.lukebemish.dev/staging/'
+    }
 }
 
 java.withSourcesJar()
