--- a/test/consumes-shared/build.gradle
+++ b/test/consumes-shared/build.gradle
@@ -27,7 +27,7 @@ version = '1.0.0'
 
 crochet {
     externalVanillaInstallation('vanilla') {
-        consume(':', 'vanilla')
+        consume("vanilla")
     }
 
     runs {
