--- a/test/gradle.properties
+++ b/test/gradle.properties
@@ -2,4 +2,10 @@ org.gradle.jvmargs=-Xmx3g
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
 
+# For debugging
+org.gradle.logging.stacktrace=all
+
 useLocalMavenForTesting=false
+
+dev.lukebemish.crochet.validation.validate-configurations-path=../codedocs/configurations.md
+dev.lukebemish.crochet.validation.validate-configurations-mode=validate
